PyQuest/src/test/semantic_analysis/valid/test018.ql
// Compatible types for multiplication operation
form testForm {
	"First Question"
	someIdentifier : decimal = 10.0 * 10
}