PyQuest/src/test/semantic_analysis/invalid/test009.ql
// Equal questions with different types
form testForm {
	"First Question"
	someIdentifier : integer
	"First Question"
	someIdentifier : decimal
}